--- a/ox-user/application.yml
+++ b/ox-user/application.yml
@@ -6,7 +6,7 @@ spring:
     name: ox-user
   datasource:
     driver-class-name: org.postgresql.Driver
-    username: ox
+    username: ox_user
     password: 1234
     url: jdbc:postgresql://localhost:5432/ox_user
   jpa:
