--- a/ox-user/application.yml
+++ b/ox-user/application.yml
@@ -35,3 +35,19 @@ eureka:
 mapstruct:
   processor:
     default-component-model: spring
+
+resilience4j:
+  circuitbreaker:
+    instances:
+      ox-bag-create:
+        minimum-number-of-calls: 3
+        slow-call-duration-threshold:
+          seconds: 2
+      ox-bag-get-price:
+        minimum-number-of-calls: 10
+        slow-call-duration-threshold:
+          seconds: 2
+      ox-bag-remove-clothes:
+        minimum-number-of-calls: 15
+        slow-call-duration-threshold:
+          seconds: 2
