try to get connection to keycloak in account module

--- a/ox-account/application.yml
+++ b/ox-account/application.yml
@@ -18,6 +18,22 @@ spring:
       data-locations:
         - classpath*:/scripts/schema.sql
         - classpath*:/scripts/data.sql
+  security:
+    oauth2:
+      client:
+        registration:
+          keycloak:
+            client-id: order-xpress-login
+            authorization-grant-type: authorization_code
+            scope:
+              - openid
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:8080/realms/order-xpress
+            user-name-attribute: principal_username
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/order-xpress
 
 springdoc:
   swagger-ui.path: /swagger-ui-custom.html
