--- a/ox-clothes/application.yml
+++ b/ox-clothes/application.yml
@@ -19,6 +19,11 @@ spring:
       data-locations:
         - classpath*:/scripts/schema.sql
         - classpath*:/scripts/data.sql
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8080/realms/order-xpress
 
 springdoc:
   swagger-ui.path: /swagger-ui-custom.html
