--- a/ox-bag/application-test.yml
+++ b/ox-bag/application-test.yml
@@ -1,9 +1,9 @@
 server:
-  port: 8087
+  port: 8062
 
 spring:
   datasource:
-    url: jdbc:h2:mem:ox_user;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    url: jdbc:h2:mem:ox_bag;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
     driver-class-name: org.h2.Driver
     username: sa
     password:
