--- a/ox-bag/application-test.yml
+++ b/ox-bag/application-test.yml
@@ -8,5 +8,5 @@ spring:
     port: 9042
     username: user
     password: 1234
-    schema-action: CREATE_IF_NOT_EXISTS
+    schema-action: recreate
     local-datacenter: datacenter1
